add the buf explanation

--- a/blogs/misc/文件读写模式.tex
+++ b/blogs/misc/文件读写模式.tex
@@ -31,14 +31,15 @@
 
 而二进制模式和文本模式本质上和二进制和文本文件没有关系。也就是说，以二进制
 模式打开读写的文件不一定是二进制文件，同理以文本模式打开读写的文件也不一定
-是文本文件。二进制模式指的是，内存里面是什么，就输出什么,比如内存里是2345，
+是文本文件。二进制模式指的是，内存缓冲区里面是什么，就输出什么,比如缓冲区里是2345，
 那么输出的时候，就输出2345。文本模式在Windows上是，写操作时，对内存里的LF(\texttt{$\backslash$n})，进行替换
 ，替换为CR
 LF两个字符，那么实际在磁盘上存储的文件就多了一个字符,读操作时，就是
 就是逆过程。这个过程对于应用程序是看不到的，是Windows内核来做的。在Unix中，
 文本模式和二进制模式没有什么区别，内核不会查看数据进行替换。\\
 
-在Windows上的编辑器，比如notepad++,可以选择“显示所有字符”，这样就可以看到磁盘的文本文件里“原生态”的字符，而不是被Windows内核处理过的文件。原理也就是
+在Windows上的编辑器，比如notepad++,可以选择“显示所有字符”，这样就可以看到磁盘的文本文件里“原生态”的字符，
+而不是被Windows内核处理过的文件。原理也就是
 在打开文本文件的时候，选择二进制模式。\\
 
 我使用跨平台的轻型IDE Geany来演示。
