finish drakmenustyle.po

--- a/translation/mageia-i18_zh/drakmenustyle.pot_zh_CN.po
+++ b/translation/mageia-i18_zh/drakmenustyle.pot_zh_CN.po
@@ -23,7 +23,7 @@ msgstr "使用系统管理员设置"
 #: ../drakmenustyle:38
 #, c-format
 msgid "Mageia menu"
-msgstr ""
+msgstr "Mageia菜单"
 
 #: ../drakmenustyle:39
 #, c-format
