新文件：    ../common/awkconf.tex 	新文件：    ../common/awkconf_nolineno.tex 	修改：      ../common/common.tex 	修改：      ../common/preambleconf.tex 	修改：      ../glibc/1.tex
        add the awk pl conf files and modify the common and preamble cfg file,
        so that it outputs neat pdf.

--- a/blogs/common/common.tex
+++ b/blogs/common/common.tex
@@ -2,7 +2,7 @@
 \usepackage{fontspec,hyperref}
 \usepackage{listings}
 \usepackage{color}
-\usepackage[BoldFont,SlangFont,CJKchecksingle]{xeCJK}
+\usepackage[BoldFont,SlantFont,CJKchecksingle]{xeCJK}
 %载入粗体，斜体，禁止单个汉字一行
 
 %\setCJKmainfont{AR PL KaitiM GB}
