--- a/blogs/glibc/1.tex
+++ b/blogs/glibc/1.tex
@@ -2,7 +2,7 @@
 \usepackage{fontspec,hyperref}
 \usepackage{listings}
 \usepackage{color}
-\usepackage[BoldFont,SlangFont,CJKchecksingle]{xeCJK}
+\usepackage[BoldFont,SlantFont,CJKchecksingle]{xeCJK}
 %载入粗体，斜体，禁止单个汉字一行
 
 %\setCJKmainfont{AR PL KaitiM GB}
